# koishi-eye

./: .gitignore  NOTES.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
src/: hasher.py  logger.py  main.py  requirements.txt  wrappers.py
src/cli/: __init__.py  cli.py  logger.py
src/finders/: __init__.py  ann.py  bruteforce.py  helpers.py  lshbucket.py  types.py
src/finders/bandlsh/: bucket.py
src/finders/hamming/: __init__.py  bucket.py  finder.py
src/finders/randomlsh/: __init__.py  bucket.py  finder.py
src/gui/: __init__.py  config.py  events.py  gui.py  payload_types.py
src/gui/components/: card_images.py  card_list.py  card_row.py  delete.py  file_picker.py  paginglist.py  task_row.py
src/gui/components/upper_row/: image_counter.py  logs.py  upper_row.py
src/gui/infra/: app_bus.py  bus.py  logger.py
src/gui/models/: image.py
src/gui/router/: bus.py  observer.py  router.py
src/gui/views/: entry.py
src/hashers/: __init__.py  image.py  types.py
